--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "razorpay": "^2.8.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
