--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "aws-sdk": "^2.1309.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.0.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
